--- a/hello-service.yml
+++ b/hello-service.yml
@@ -5,7 +5,9 @@ metadata:
 spec:
   selector:
     app: hello-service
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 9090
+      targetPort: 8080
+      nodePort: 9090
